fix/flickering fix

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -30,7 +30,7 @@
     }
 
     .animate-swipe-out {
-        animation: swipe-out 0.3s ease-in-out;
+        animation: swipe-out 0.3s ease-in-out forwards;
     }
 
     @keyframes swipe-in {
